# mengxi

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  README_EN.md  build_moonbit.sh  moonbit.mbt.md
crates/agent/: Cargo.toml
crates/agent/agents/: compare.md  explore.md  movie-analyst.md  review.md  search.md
crates/agent/src/: lib.rs  project_ops.rs
crates/agent/src/agent/: color_science_context.md  config.rs  events.rs  mod.rs  state.rs
crates/agent/src/llm/: claude.rs  events.rs  mod.rs  openai_compat.rs  provider.rs
crates/agent/src/session/: compactor.rs  mod.rs  store.rs  types.rs
crates/agent/src/subagent/: definition.rs  mod.rs  spawn.rs
crates/agent/src/tool/: mod.rs  registry.rs
crates/agent/src/tools/: analyze.rs  db_util.rs  hash_anchor.rs  lut_diff.rs  lut_edit.rs  mod.rs  movie_analysis.rs  project_mgmt.rs  search.rs
crates/cli/: Cargo.toml
crates/cli/src/: config.rs  main.rs  project_ops.rs  test_utils.rs  validate.rs  validate_dataset.rs
crates/cli/src/commands/: chat_cmd.rs  color_mood_cmd.rs  color_transfer_cmd.rs  compare_cmd.rs  config_cmd.rs  consistency_cmd.rs  db_cmd.rs  embed_cmd.rs  export_cmd.rs  fingerprint_cmd.rs  fingerprint_explorer_cmd.rs  helpers.rs  import_cmd.rs  info_cmd.rs  lut_dep_cmd.rs  lut_diff_cmd.rs  mod.rs  movie_compare_cmd.rs  reextract_cmd.rs  scene_detect_cmd.rs  search_cmd.rs  stats_cmd.rs  tag_cmd.rs  validate_cmd.rs  validate_dataset_cmd.rs  visual_search_cmd.rs
crates/cli/src/tui/: agent_bridge.rs  app.rs  fingerprint_explorer.rs  layout.rs  markdown.rs  mod.rs
crates/core/: Cargo.toml  build.rs
crates/core/src/: analytics.rs  audio_waveform.rs  calibration.rs  color_distribution.rs  color_dna.rs  color_mood.rs  color_pairs.rs  color_scatter.rs  color_science.rs  color_transfer.rs  comparison.rs  consistency.rs  db.rs  downsample.rs  feature_pipeline.rs  feature_translation.rs  feedback.rs  fingerprint.rs  format_traits.rs  grading_features.rs  hybrid_scoring.rs  lib.rs  lut_diff.rs  lut_generation.rs  movie_fingerprint.rs  movie_search.rs  project.rs  python_bridge.rs  scene_boundary.rs  search.rs  segmentation.rs  spatial_pyramid.rs  tag.rs  temporal_pyramid.rs  test_db.rs  tile_search.rs  vector_index.rs  vectorscope.rs
crates/core/src/search/: bhattacharyya_search.rs  embedding.rs  histogram_search.rs  histogram_utils.rs  hybrid_search.rs  hybrid_search_tests.rs  image_search.rs  mod.rs  query.rs  tag_search.rs  types.rs
crates/core/src/viz/: cineprint.rs  (+6 more)
crates/core/tests/: ffi_contract_test.rs  search_pipeline_test.rs
python/: pyproject.toml  requirements.txt
python/mengxi_ai/: __init__.py  config.py  embedding.py  health.py  logging_config.py  main.py  models.py  path_utils.py  tagging.py  tokenizer.py
python/tests/: check_error_paths.py  check_main.py  check_protocol_e2e.py  check_tagging.py  conftest.py  test_embedding.py  test_main.py  test_models.py  test_tagging.py
python/tools/: color_fingerprint.html  color_fingerprint_3d.html
(+61 files in other folders)
