[workspace]
members = ["crates/cli", "crates/core", "crates/format"]
resolver = "2"

[workspace.dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
rusqlite = { version = "0.38", features = ["bundled"] }
dirs = "6"
byteorder = "1"
exr = "1.74"
