[workspace]
members = ["crates/cli", "crates/core", "crates/format", "crates/agent"]
resolver = "2"

[workspace.dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
rusqlite = { version = "0.38", features = ["bundled"] }
dirs = "6"
unicode-width = "0.2"
byteorder = "1"
exr = "1.74"
mp4parse = "0.17"
log = "0.4"
instant-distance = { version = "0.6", features = ["with-serde"] }
bincode = "1"
thiserror = "2"
