[project]
name = "mengxi-ai"
version = "0.1.0"
description = "AI inference service for Mengxi color grading pipeline"
requires-python = ">=3.13"
dependencies = [
    "onnxruntime>=1.16.0",
    "numpy>=1.24.0",
    "Pillow>=10.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
