[package]
name = "mengxi-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["stream", "json"] }
reqwest-eventsource = "0.6"
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = "0.1"
thiserror = "2"
futures = "0.3"
tokio-stream = "0.1"
log = { workspace = true }
mengxi-core = { path = "../core" }
mengxi-format = { path = "../format" }
# TODO: remove once project_ops.rs is migrated to core db API (documented exception)
rusqlite = { workspace = true }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
