[package]
name = "mx"
version = "0.1.0"
edition = "2021"

[dependencies]
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
dirs.workspace = true
unicode-width.workspace = true
rusqlite.workspace = true
ratatui = "0.29"
crossterm = "0.28"
tui-textarea = "0.7"
mengxi-core = { path = "../core" }
mengxi-format = { path = "../format" }
mengxi-agent = { path = "../agent" }
thiserror.workspace = true
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
tempfile = "3"
