[package]
name = "mengxi-core"
version = "0.1.0"
edition = "2021"

[dependencies]
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
dirs.workspace = true
mengxi-format = { path = "../format" }
instant-distance.workspace = true
bincode.workspace = true
thiserror.workspace = true
image.workspace = true
gif.workspace = true
ab_glyph.workspace = true

[dev-dependencies]
tempfile = "3"
exr.workspace = true
